# dawn

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  config.sh  dawn.json  sync.sh  update.sh
dawn_static/: CMakeLists.txt
include/dawn/native/: D3D12Backend.h  DawnNative.h  VulkanBackend.h
src/dawn/: dawn.json
src/dawn/common/: Mutex.cpp
src/dawn/native/: BUILD.gn  CMakeLists.txt  DawnNative.cpp  Device.cpp
src/dawn/native/d3d12/: BackendD3D12.cpp  CommandRecordingContext.h  D3D12Backend.cpp  TextureD3D12.cpp
src/dawn/native/vulkan/: AdapterVk.cpp  AdapterVk.h  BackendVk.cpp  BackendVk.h  DeviceVk.cpp  PhysicalDeviceVk.cpp  PhysicalDeviceVk.h  VulkanBackend.cpp
src/dawn/samples/: ManualSwapChainTest.cpp
src/tint/cmd/: BUILD.cmake
src/tint/cmd/loopy/: BUILD.cmake
src/tint/cmd/tint/: BUILD.gn
src/tint/ir/: module.cc
src/tint/lang/core/ir/: instruction_result_test.cc  terminate_invocation.h
src/tint/lang/msl/validate/: BUILD.bazel
src/tint/lang/spirv/reader/: BUILD.cmake  reader.cc
src/tint/lang/spirv/writer/: writer_bench.cc
src/tint/lang/spirv/writer/common/: option_helper.cc
src/tint/lang/spirv/writer/printer/: BUILD.bazel
src/tint/lang/wgsl/sem/: pipeline_stage_set.h
src/tint/lang/wgsl/writer/: writer.h
src/tint/utils/text/: styled_text_printer_windows.cc
